crud working, multiple controllers in a single view, broken due to inheritance support

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -672,5 +672,5 @@ a.skip {
 }
 
 .buttonsInLine .save {
-    background-image: url(../images/skin/database_save.png) !important;
+    background-image: url(../images/skin/database_save.png);
 }
